| Bug #32970 | Locking thread not added to process list properly | ||
|---|---|---|---|
| Submitted: | 4 Dec 2007 17:28 | Modified: | 26 Feb 2008 1:39 |
| Reporter: | Chuck Bell | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Backup | Severity: | S3 (Non-critical) |
| Version: | 6.0 | OS: | Any |
| Assigned to: | Chuck Bell | CPU Architecture: | Any |
[4 Dec 2007 17:28]
Chuck Bell
[17 Dec 2007 23:26]
Chuck Bell
Original code was correct but required additional code to allow thread to show in processlist. Patch forthcoming.
[18 Dec 2007 22:32]
Chuck Bell
Patch ready for review. See http://lists.mysql.com/commits/40163.
[19 Dec 2007 15:37]
Chuck Bell
Problem found in patch corrected. See new patch http://lists.mysql.com/commits/40212 .
[30 Jan 2008 22:38]
Rafal Somla
Good to push.
[31 Jan 2008 4:47]
Chuck Bell
Patch queued.
[25 Feb 2008 20:19]
Bugs System
Pushed into 6.0.5-alpha
[26 Feb 2008 1:39]
Paul DuBois
Noted in 6.0.5 changelog. The Online Backup locking thread did not show up in the server's process list information due to a race condition.
[14 Mar 2008 1:32]
Paul DuBois
Correction: No changelog entry needed; this bug did not appear in any released version.
