BUG#32970 : Locking thread not added to process list properly

Solves the problem of the locking thread not being present in
the processlist. This was due to the thd->query not being
populated and the info attribute not supplied.